--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ https://templatemo.com/tm-535-softy-pinko
                     <div class="center-heading">
                         <h2 class="section-title"><strong>Our Location</strong></h2>
                     </div>
-                    <iframe class="col-lg-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6376697743813!2d106.75849581486703!3d-6.311239263519632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69efcfd863287d%3A0x763539a44f59e2de!2sVilla%20Kanaya%20Cirendeu!5e0!3m2!1sid!2sid!4v1650344003724!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="col-lg-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.7043042294767!2d107.7690754148692!3d-6.558961265942911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e693b44af8e0cd3%3A0xf90a2a11ae74e1c2!2sKantor%20Hukum%20SAOKORI%20%26%20Partners!5e0!3m2!1sid!2sid!4v1650346155911!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
