--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-535-softy-pinko
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="#" class="logo">
-                            <img src="assets/images/Saokori.png" alt="Saokori Pinko"/>
+                            <img src="assets/images/law firm.jpg" alt="Saokori Pinko"/>
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
@@ -146,42 +146,42 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="row">
                     <div class="col-md-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/new.png" alt=""></i>
+                            <i><img src="assets/images/pin logo.png" alt=""></i>
                             <strong>Litigasi</strong>
                             <span>Kami akan memberikan pelayanan jasa hukum terbaik dalam segala proses litigasi .</span>
                         </a>
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/new.png" alt=""></i>
+                            <i><img src="assets/images/pin logo.png" alt=""></i>
                             <strong>Non-litigasi</strong>
                             <span>Kami dapat memberikan pelayanan penyelesaian masalah hukum diluar proses peradilan.</span>
                         </a>
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/new.png" alt=""></i>
+                            <i><img src="assets/images/pin logo.png" alt=""></i>
                             <strong>Legal Opinion</strong>
                             <span>Kami dapat memberikan pelayanan penulisan opini hokum (legal opinion) kepada pengguna jasa kami yang berkaitan dengan permasalahan hukum yang sedang dihadapi.</span>
                         </a>
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/new.png" alt=""></i>
+                            <i><img src="assets/images/pin logo.png" alt=""></i>
                             <strong>Perancangan dan Perjanjian Kontrak</strong>
                             <span>Kami dapat merancang sebuah perjanjian yang dapat disusun dalam bentuk kontrak (MoU) untuk orang persorangan, perseorangan dan perusahaan maupun antar perusahaan.</span>
                         </a>
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/new.png" alt=""></i>
+                            <i><img src="assets/images/pin logo.png" alt=""></i>
                             <strong>Kepatuhan Hukum Perusahaan</strong>
                             <span>Kami dapat memastikan agar perusahaan dapat mengikuti dan patuh terhadap berbagai peraturan perundang-undangan baik dalam level daerah, wilayah hingga peraturan perundang-undangan yang berlaku berkaitan dengan bentuk perusahaan, aturan internal perusahaan dan bidang bisnis yang sedang dan atau hendak dijalankan.</span>
                         </a>
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/new.png" alt=""></i>
+                            <i><img src="assets/images/pin logo.png" alt=""></i>
                             <strong>Quality Management System</strong>
                             <span>Dengan pengalaman lebih dari 15 tahun di Dunia Qualty Management System 
                                 dan yang pertama di Indonesia yang membantu meraih system BRC IoP 3 kami 
@@ -191,7 +191,7 @@ https://templatemo.com/tm-535-softy-pinko
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/new.png" alt=""></i>
+                            <i><img src="assets/images/pin logo.png" alt=""></i>
                             <strong>Kepatuhan Hukum Perusahaan</strong>
                             <span>Managing Partners Kantor Hukum Saokori and Partners yang berpengalaman 
                                 lebih dari 20 tahun di lingkungan Pabrik baik menjabat Senior Section Head, 
@@ -201,7 +201,7 @@ https://templatemo.com/tm-535-softy-pinko
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/new.png" alt=""></i>
+                            <i><img src="assets/images/pin logo.png" alt=""></i>
                             <strong>Restruktur Perusahaan dan Kepailitan
                             </strong>
                             <span>Kami berpengalaman didalam PKPU dan merupakan Partner yang baik bagi Debitur dan 
@@ -266,10 +266,10 @@ https://templatemo.com/tm-535-softy-pinko
                         </div>
                         <div class="blog-content">
                             <h3>
-                                <a href="#">Vivamus ac vehicula dui</a>
+                                <a href="#">Kegiatan Murajaah Bersama</a>
                             </h3>
                             <div class="text">
-                               Cras aliquet ligula dui, vitae fermentum velit tincidunt id. Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas augue.
+                                Cara yang dipergunakan untuk menjaga dari lupa dan salah dengan cara mengulang kembali hafalan yang sudah pernah dihafalkan untuk .
                             </div>
                             <a href="#" class="main-button">Read More</a>
                         </div>
@@ -282,10 +282,10 @@ https://templatemo.com/tm-535-softy-pinko
                         </div>
                         <div class="blog-content">
                             <h3>
-                                <a href="#">Phasellus convallis augue</a>
+                                <a href="#">Tadabbur Alam</a>
                             </h3>
                             <div class="text">
-                                Aliquam commodo ornare nisl, et scelerisque nisl dignissim ac. Vestibulum finibus urna ut velit venenatis, vel ultrices sapien mattis.
+                                Bentuk kegiatan ini bertujuan untuk memahami tanda-tanda kekuasaan dan kebesaran Alloh dengan melihat beragam ciptaannya.
                             </div>
                             <a href="#" class="main-button">Read More</a>
                         </div>
@@ -298,7 +298,7 @@ https://templatemo.com/tm-535-softy-pinko
                         </div>
                         <div class="blog-content">
                             <h3>
-                                <a href="#">Nam gravida purus non</a>
+                                <a href="#">Perayaan Idul Adha Bersama</a>
                             </h3>
                             <div class="text">
                                 Maecenas eu erat vitae dui convallis consequat vel gravida nulla. Vestibulum finibus euismod odio, ut tempus enim varius eu.
