--- a/index.html
+++ b/index.html
@@ -99,11 +99,7 @@ https://templatemo.com/tm-535-softy-pinko
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="hr"></div>
-                </div>
-            </div>
+            
         </div>
     </section>
     <!-- ***** Features Big Item End ***** -->
@@ -269,7 +265,7 @@ https://templatemo.com/tm-535-softy-pinko
                                 <a href="#">Kegiatan Murajaah Bersama</a>
                             </h3>
                             <div class="text">
-                                Cara yang dipergunakan untuk menjaga dari lupa dan salah dengan cara mengulang kembali hafalan yang sudah pernah dihafalkan untuk .
+                                Cara yang dipergunakan untuk menjaga dari lupa dan salah dengan cara mengulang kembali hafalan yang sudah pernah dihafalkan.
                             </div>
                             <a href="#" class="main-button">Read More</a>
                         </div>
