--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/images/address.png">
+    <link rel="shortcut icon" href="assets/images/address1.png">
     <title>Saokori & Partners - Law Firm</title>
 <!--
 SOFTY PINKO
