--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">We can help you to solve your problem</h2>
+                        <h2 class="section-title"><strong>We can help you to solve your problem</strong></h2>
                     </div>
                     <div class="left-text">
                         <p>Dalam menjalankan tugas profesi, tentu kami berpedoman atas cita-cita hukum itu sendiri yakni keadilan, kepastian dan kemanfaatan hukum disetiap pembelaan-pembelaan yang kami berikan baik dalam area litigasi dan non litigasi baik dalam jenis perkara pidana, perdata, sengketa waris, restrukturisasi, Quality Management System (QMS), alternative dispute resolution (ADR), kepailitan, hukum keluarga, sengketa pertanahan, dl</p>
